--- a/index.html
+++ b/index.html
@@ -3,24 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Cupcake de café com chantilly</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alice&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
-      <img class="cupcake-img" src="" alt="" />
+      <img src="/assets/main-image.jpg" alt="" />
       <main>
-        <h1>Cupcake de café com chantilly</h1>
-        <p>
+        <h1 class="text-color-primary">Cupcake de café com chantilly</h1>
+        <p class="text-color-secondary">
           O bolinho perfeito para acompanhar o café de todos os dias. É muito
           fácil e ainda por cima fica maravilhoso, com certeza vai impressionar.
           Faz e depois me conta o que achou!
         </p>
-        <div>Tempo: 1h10</div>
-        <div>Rendimento: 12 porções</div>
-        <div>Dificuldade: fácil</div>
+        <div class="text-color-secondary">
+          <div>Tempo: 1h10</div>
+          <div>Rendimento: 12 porções</div>
+          <div>Dificuldade: fácil</div>
+        </div>
         <section>
-          <h2>Ingredientes</h2>
-          <ul>
+          <h2 class="text-color-primary">Ingredientes</h2>
+          <ul class="text-color-secondary">
             <li>1 e 1/2 xícara (chá) de água morna</li>
             <li>1 colher (sopa) de café solúvel</li>
             <li>3 ovos</li>
@@ -38,8 +47,8 @@
           </ul>
         </section>
         <section>
-          <h2>Modo de preparo</h2>
-          <p>
+          <h2 class="text-color-primary">Modo de preparo</h2>
+          <p class="text-color-secondary">
             No liquidificador, bata a água, o café solúvel, os ovos, o óleo, o
             açúcar e o chocolate em pó até ficar homogêneo. Transfira para uma
             tigela, adicione a farinha e o fermento e misture com uma colher.
@@ -48,13 +57,13 @@
             médio, preaquecido, por 25 minutos ou até assar e dourar. Retire e
             deixe esfriar.
           </p>
-          <p>
+          <p class="text-color-secondary">
             Para o recheio, leve todos os ingredientes ao fogo médio, mexendo
             bem até engrossar. Desligue, deixe esfriar e coloque dentro de um
             saco de confeiteiro com bico perle. Reserve. Coloque o chantilly
             dentro de um saco de confeiteiro com bico pitanga e reserve.
           </p>
-          <p>
+          <p class="text-color-secondary">
             Para a montagem, faça um furo no centro dos cupcakes e recheie com o
             brigadeiro de café reservado. Decore as superfícies dos cupcakes com
             o chantilly reservado, fazendo círculos. Decore com grãos de café e
@@ -62,6 +71,9 @@
           </p>
         </section>
       </main>
+    </div>
+    <div class="credit text-color-on-bg">
+      Feito com <img src="/assets/heart-fill.svg" alt="" /> por mim
     </div>
   </body>
 </html>
