--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
     <div class="container">
       <img src="/assets/main-image.jpg" alt="" />
       <main>
-        <h1 class="text-color-primary">Cupcake de café com chantilly</h1>
-        <p class="text-color-secondary">
-          O bolinho perfeito para acompanhar o café de todos os dias. É muito
-          fácil e ainda por cima fica maravilhoso, com certeza vai impressionar.
-          Faz e depois me conta o que achou!
-        </p>
-        <div class="text-color-secondary">
-          <div>Tempo: 1h10</div>
-          <div>Rendimento: 12 porções</div>
-          <div>Dificuldade: fácil</div>
-        </div>
-        <section>
+        <section id="about">
+          <h1 class="text-color-primary">Cupcake de café com chantilly</h1>
+          <p class="text-color-secondary">
+            O bolinho perfeito para acompanhar o café de todos os dias. É muito
+            fácil e ainda por cima fica maravilhoso, com certeza vai
+            impressionar. Faz e depois me conta o que achou!
+          </p>
+          <p class="text-color-secondary">
+            Tempo: 1h10 <br />
+            Rendimento: 12 porções <br />
+            Dificuldade: fácil <br />
+          </p>
+        </section>
+        <section id="ingredients">
           <h2 class="text-color-primary">Ingredientes</h2>
           <ul class="text-color-secondary">
             <li>1 e 1/2 xícara (chá) de água morna</li>
@@ -46,7 +48,7 @@
             <li>2 colheres (sopa) de manteiga</li>
           </ul>
         </section>
-        <section>
+        <section id="directions">
           <h2 class="text-color-primary">Modo de preparo</h2>
           <p class="text-color-secondary">
             No liquidificador, bata a água, o café solúvel, os ovos, o óleo, o
@@ -56,14 +58,14 @@
             coloque em uma fôrma grande, um ao lado do outro. Leve ao forno
             médio, preaquecido, por 25 minutos ou até assar e dourar. Retire e
             deixe esfriar.
-          </p>
-          <p class="text-color-secondary">
+            <br />
+            <br />
             Para o recheio, leve todos os ingredientes ao fogo médio, mexendo
             bem até engrossar. Desligue, deixe esfriar e coloque dentro de um
             saco de confeiteiro com bico perle. Reserve. Coloque o chantilly
             dentro de um saco de confeiteiro com bico pitanga e reserve.
-          </p>
-          <p class="text-color-secondary">
+            <br />
+            <br />
             Para a montagem, faça um furo no centro dos cupcakes e recheie com o
             brigadeiro de café reservado. Decore as superfícies dos cupcakes com
             o chantilly reservado, fazendo círculos. Decore com grãos de café e
@@ -72,8 +74,8 @@
         </section>
       </main>
     </div>
-    <div class="credit text-color-on-bg">
-      Feito com <img src="/assets/heart-fill.svg" alt="" /> por mim
-    </div>
+    <footer class="credit text-color-on-bg">
+      Feito com <img src="/assets/heart-fill.svg" alt="" /> pela Rocketseat
+    </footer>
   </body>
 </html>
